# Tokfilkok

./: CMakeLists.txt  LICENSE  README.md  classes.h  main.cpp  main.h  utilities.h
Enemies/: ananasz.txt  banan.txt  barack.txt  broki.txt  brokkoli.txt  citrom.txt  cseresznye.txt  dinnye.txt  eper.txt  gomba.txt  korte.txt  krumpli.txt  kuki.txt  kukorica.txt  kumpli.txt  körte.txt  paprika.txt  paradicsom.txt  praladicsom.txt  repa.txt  retek.txt  sparga.txt  spenot.txt  szolo.txt  szőlő.txt  tok.txt  uborka.txt  zeller.txt
Source_code/: classes.h  main.cpp  utilities.h
Tests/: CMakeLists.txt  Tests.sln  tests.cpp
Tests/Tests/: Tests.vcxproj  test.cpp
Tests/Tests/x64/Debug/: Tests.exe.recipe  Tests.vcxproj.FileListAbsolute.txt
Tests/Tests/x64/Debug/Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+1 more)
Tests/TokfilkokTest/: TokfilkokTest.sln
Tests/TokfilkokTest/Debug/: TokfilkokTest.ilk
Tests/TokfilkokTest/TokfilkokTest/: TokfilkokTest.vcxproj  test.cpp
Tests/TokfilkokTest/TokfilkokTest/Debug/: TokfilkokTest.exe.recipe  TokfilkokTest.vcxproj.FileListAbsolute.txt
Tests/x64/Debug/: .gitattributes
Utilities/: classes.h  utilities.cpp
Visual Studio Project/: Tokfilkok.sln  Tokfilkok.vcxproj  Tokfilkok.vcxproj.filters
txtFiles/: bevezeto.txt  content_expansion.md  debuffs.txt  debuffsASCII.txt  doors.txt  doors1.txt  doors2.txt  doors3.txt  doorsLeft.txt  doorsRight.txt  lose.txt  shop.txt  shopASCII.txt  victory.txt
(+9 files in other folders)
